--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL='mongodb+srv://BOkumu:ANkIj04bQJRpyejt@waves.gxly8.mongodb.net/?retryWrites=true&w=majority&appName=Waves'
+JWT_SECRET='jakokwenge12'
 PORT=3001
